# senior-project

./: .gitignore  compose.yml  pyproject.toml
backend/: main.py
backend/api/routes/: admin.py  auth.py  history.py  predict.py
backend/db/: database.py
backend/schemas/: match.py  predict.py  result.py  score.py  user.py
backend/services/: auth_service.py  ml_service.py
backend/utils/: audio.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/layouts/: Layout.jsx
frontend/src/pages/: Competition.jsx  Home.jsx  Login.jsx  Register.jsx  SessionSetup.jsx
frontend/src/services/: api.js
ml_pipeline/models/: bird_song_model.keras
ml_pipeline/scripts/: 01_5_audio_augmentation.py  01_5_split_and_augment.py  01_extract_events.py  02_make_spectrograms.py  03_train_model.py  04_evaluate_model.py
